# movie-fav

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  buildx-helper.sh  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test.yml  movie-fav.code-workspace  run.sh  sample-env
microservices/: .bandit  .dockerignore  .flake8  Dockerfile  Makefile  conftest.py  package.json  pyproject.toml  pytest.ini  sitecustomize.py  start  turbo.json
microservices/apps/account/src/app_lib/: app.py  link.py  unary_server.py  worker.py
microservices/apps/account/src/controller/: controller_api.py  controller_grpc.py  controller_worker.py
microservices/apps/account/src/domain/: lib.py
microservices/apps/account/src/models/: __init__.py  base.py
microservices/apps/account/test/: conftest.py
microservices/apps/apollo/: package-lock.json  package.json
microservices/apps/apollo/src/: gateway.js
microservices/apps/grafana/dashboards/: prometheus-system.json
microservices/apps/monxt/src/app_lib/: app.py  link.py  services.py  unary_server.py  worker.py
microservices/apps/monxt/src/controller/: controller_api.py  controller_grpc.py  controller_worker.py
microservices/apps/monxt/test/: conftest.py
microservices/apps/monxt/test/test_app_lib/: link.py
microservices/apps/movie/src/app_lib/: app.py  services.py  unary_server.py  worker.py
microservices/apps/movie/src/controller/: controller_api.py  controller_grpc.py  controller_worker.py
microservices/apps/movie/src/domain/: lib.py
microservices/apps/movie/src/models/: __init__.py  base.py
microservices/apps/movie/test/: conftest.py
microservices/apps/movie/test/domain/: test_movie_lib.py
microservices/apps/nginx/conf/: nginx-certbot-init.conf  nginx.conf
microservices/apps/nginx/conf/allnationsbiblechurch/: allnationsbiblechurch.org.conf
microservices/apps/nginx/conf/labelle/: labellebf.com.conf
microservices/apps/nginx/conf/monxt/: monxt.com.conf
microservices/apps/nginx/conf/promedexpress/: promedexpress.net.conf
microservices/apps/person/test/: conftest.py
microservices/apps/postgres/: .dockerignore  postgres.conf
microservices/apps/postgres/dev/: create_all_db.sql
microservices/apps/postgres/prod/: create_all_db.sql
microservices/apps/prometheus/: prometheus.yml
microservices/apps/rabbitmq/: README.md
microservices/apps/redis/: redis.conf
microservices/apps/shows/test/: conftest.py
microservices/apps/theater/: README.md  capacitor.config.json  codegen.yml  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
microservices/apps/theater/app/: ApolloWrapper.tsx  authContext.tsx  layout.tsx  page.tsx
microservices/apps/theater/components/: CastSlide.tsx  CircularRate.tsx  Container.tsx  DetailsBanner.tsx  EpisodeCard.tsx  Home.tsx  HomeBanner.tsx  MovieCard.tsx  Movies.tsx  MoviesLine.tsx  Row.tsx  SearchComponent.tsx  Seasons.tsx  Shows.tsx  SubMovieLine.tsx  pagination.tsx
microservices/apps/theater/config/: ui.configs.ts
microservices/apps/theater/css/: globals.css  style.css
microservices/apps/theater/graphql/: index.ts  schema.ts  useAccount.tsx  useMovie.tsx  useShows.tsx
microservices/apps/theater/types/: error.ts  settings.ts
microservices/apps/theater/util/: regex.tsx
microservices/links/link_api/grpc/: __init__.py  cart.py  event.py  movie.py  product.py  shows.py
microservices/links/link_config/config/: __init__.py  base.py  test.py
microservices/links/link_controller/: controller_api.py
microservices/links/link_domain/: base.py
microservices/links/link_domain/imdb/: __init__.py  base.py
microservices/links/link_domain/imdb_helper/: __init__.py  base.py
microservices/links/link_domain/imdb_ng/: __init__.py  base.py
microservices/links/link_domain/pyratebay/: __init__.py  torrent.py
microservices/links/link_domain/stripe/: __init__.py  base.py
microservices/links/link_lib/: microservice_controller.py  microservice_dynamic_link.py  microservice_general.py  microservice_generic_model.py  microservice_graphql_model.py  microservice_logger.py  microservice_multiprocessing.py  microservice_request.py  microservice_response.py  microservice_signals.py  microservice_to_apollo.py  microservice_to_grpc_unary_client.py  microservice_to_grpc_unary_server.py  microservice_to_postgres.py  microservice_to_redis.py
microservices/links/link_lib/grpc_unary/: unary_pb2.py  unary_pb2_grpc.py
microservices/links/link_lib/saga_framework/: __init__.py  async_saga.py  asyncapi_utils.py  base_saga.py  celery_utils.py  saga_handlers.py  stateful_saga.py  utils.py
microservices/links/link_models/: base.py  enums.py
microservices/links/link_models/messaging/: __init__.py  create_movie_message.py  create_notify_message.py  create_person_message.py  create_product_message.py  create_shows_message.py  create_store_message.py  movie_import_message.py  send_account_created_email_message.py  send_account_forgot_password_email_message.py  shows_import_message.py  sync_product_message.py
microservices/links/link_test/fixtures/: __init__.py  account.py  auth.py  database.py  fake_model.py  fragments.py  graphql.py  lib.py  link_domain.py  link_lib.py  link_redis.py
microservices/links/test/: conftest.py
microservices/links/test/domain/: common.py  test_async_saga.py  test_base_saga.py  test_general.py  test_microservice_dynamic_link.py  test_request.py  test_response.py  test_saga_handlers.py  test_stateful_saga.py
microservices/links/test/test_app_lib/: link.py
(+560 files in other folders)
