[tool.black]
line-length = 120
target-version = ['py313']
include = '\.pyi?$'
exclude = '.venv/*'

[tool.poetry]
name = "microservices"
version = "0.1.0"
description = ""
authors = ["Richard Maku <makurichard14@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
tenacity = "9.1.2"
SQLAlchemy = "2.0.43"
SQLAlchemy-Utils = "0.41.2"
redis = "6.4.0"
fastapi = "0.116.1"
ariadne = "0.26.2"
uvicorn = "0.35.0"
setproctitle = "^1.3.2"
gunicorn = {extras = ["setproctitle"], version = "23.0.0"}
PyJWT = "2.10.1"
bcrypt = "4.3.0"
pydantic = "2.11.7"
requests = "2.32.5"
cinemagoer = "2023.5.1"
sendgrid = "6.12.4"
sqlmodel = "0.0.24"
selenium = "4.35.0"
watchgod = "0.8.2"
celery = "5.5.3"
asyncapi = {extras = ["http", "yaml", "redis", "subscriber", "docs"], version = "0.14.1"}
grpcio = "1.74.0"
grpcio-tools = "1.74.0"
psycopg2 = "2.9.10"
authlib = "1.6.3"
httpx = "0.28.1"
pandas = "2.3.2"
webdriver-manager = "4.0.2"
alembic = "1.16.5"
beautifulsoup4 = "4.13.5"
itsdangerous = "2.2.0"
numpy = "2.3.2"
geopy = "2.4.1"
parsel = "1.10.0"
loguru = "0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-benchmark = "5.1.0"
pre-commit = "4.3.0"
flake8 = "7.3.0"
pytest-cov = "6.2.1"
freezegun = "1.5.5"
pytest-asyncio = "1.1.0"
requests-mock = "1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
